# learnopengl_voxel_experiment

./: CMakeLists.txt  README.md
media project files/: items
media project files/visual/coin animation/: coin.c4d
resources/shaders/billboard/: billboard.frag  billboard.vert
resources/shaders/font/: font_pixel_2d.frag  font_pixel_2d.vert
resources/shaders/testshader/: shader.frag  shader.vert
resources/shaders/voxel/: voxel_shader.frag  voxel_shader.vert
resources/shaders/voxel_tris/: voxel_shader.frag  voxel_shader.vert
resources/textures/: items.pack  padded_textures.atlas  spritesheet.atlas  spritesheet.psd  spritesheet_strip.psd  spritesheet_strip_vertical.psd  spritesheet_strip_vertical_noise.psd
resources/textures/billboards/: enemy.psd  person.psd
resources/textures/blocks/: spritesheet.psd  spritesheet_strip_vertical.psd
src/: main.cpp
src/ecs/: Components.cpp  Components.h  World.cpp  World.h
src/ecs/systems/: AI.cpp  AI.h  ChunkManagement.cpp  ChunkManagement.h  Graphics.cpp  Graphics.h  Physics.cpp  Physics.h  PlayerControl.cpp  PlayerControl.h
src/ecs/systems/terrain/: Chunk.cpp  Chunk.h  ChunkContainer.cpp  ChunkContainer.h  ChunkManagement.cpp  ChunkManagement.h  CoordCrossFade.h  CoordShift.h  MainTerrainFunction.h  NoisePosTerrain.h  NoiseToPosTerrain.cpp  NoiseToPosTerrain.h  TerrainCrossFade.h  TerrainFunctions.cpp  TerrainFunctions.h
src/graphics/: Shader.cpp  Shader.h  TextureManager.cpp  TextureManager.h  VirtualTexture.cpp  VirtualTexture.h
src/other/: Constants.h  CustomAlgorithms.cpp  CustomAlgorithms.h  DataTypes.cpp  DataTypes.h  Profiler.cpp  Profiler.h
